--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,11 +1,19 @@
 FROM golang:1.12.6-alpine3.9 as builder
+
 RUN apk add --no-cache git
 
-RUN mkdir /app
-ADD . /app/
 WORKDIR /app
-RUN go mod download
-RUN go build -o server ./cmd/server
-# RUN CGO_ENABLED=0 GOOS=linux go install ./cmd/...
+COPY go.mod .
+COPY go.sum .
 
-CMD ["/app/server"]
+ENV GO111MODULE on
+ENV GOBIN /go/bin
+
+RUN go mod download
+
+#
+COPY . .
+
+RUN CGO_ENABLED=0 GOOS=linux go install ./cmd/...
+
+CMD ["/go/bin/server"]
