--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     image: asperitus/filebot-ui:latest
     restart: always
     # volumes:
-    #   - .:/app
-    working_dir: /app
+    #   - ./ui:/app
+    # working_dir: /app
     container_name: frontend
     hostname: frontend
     ports:
