--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -3,11 +3,12 @@ FROM node:10.16-buster
 EXPOSE 3000
 
 WORKDIR /app
-COPY package.json .
-COPY yarn.lock .
+
+# COPY package.json .
+# COPY yarn.lock .
 
 RUN yarn install --verbose
 
-COPY . .
+# COPY . .
 
 CMD [ "yarn", "start" ]
