--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -4,8 +4,7 @@ EXPOSE 3000
 
 WORKDIR /app
 
-# COPY package.json .
-# COPY yarn.lock .
+COPY package.json yarn.lock ./
 
 RUN yarn install --verbose
 
